# libtodotxt

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  buildsetup.sh  pretestestup.sh
src/: CMakeLists.txt  main.cpp
src/lib/: githelper.cpp  githelper.h  todoitem.cpp  todoitem.h  todotxt.cpp  todotxt.h  todotxtgit.cpp  todotxtgit.h  todotxtmanager.h
test/: CMakeLists.txt  main.cpp  todoitem_test.cpp  todoitem_test.h  todotxt_test.cpp
