project(libtodotxt)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "-std=c++11")
set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
set(CMAKE_BUILD_TYPE Debug)
#aux_source_directory(. SRC_LIST)
#file(GLOB SRC . *.cpp)
include_directories(.)
include_directories(./lib)
set(SOURCES main.cpp lib/todotxt.cpp lib/todotxt.h lib/todoitem.cpp lib/todoitem.h)
add_executable(${PROJECT_NAME} ${SOURCES})
#target_link_libraries(${PROJECT_NAME} test)
