project(libtodotxt_test)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "-std=c++11")
set(CMAKE_BUILD_TYPE Debug)
#aux_source_directory(. SRC_LIST)

#add_subdirectory(gtest)
#include_directories(../gtest/include)
#add_executable(${PROJECT_NAME} main.cpp)
#find_package(GTest REQUIRED)
#set(GTEST_SOURCE_DIR gtest)
add_subdirectory(gtest)
INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(../src/lib)
#set(GTEST ${GTEST_SOURCE_DIR}/include)
#INCLUDE_DIRECTORIES(${GTEST_SOURCE_DIR}/include)
#include_directories(${GTEST_INCLUDE_DIRS})
file(GLOB SRC . *.cpp)
set(SOURCES ${SRC} ../src/lib/todoitem.cpp ../src/lib/todoitem.h)
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} gtest gtest_main pthread)
#target_link_libraries(${PROJECT_NAME} ${GTEST_LIBRARIES} pthread ${SRC})
#target_link_libraries(todoitem_test ${GTEST_INCLUDE_DIRS} pthread)

#if (gtest)
#find_package(GTest REQUIRED)
#include_directories(${GTEST_INCLUDE_DIRS})
#add_executable(todoitem_test todoitem_test.cpp)
#endif()
